# openGPOS

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  freeGPOS.uf2  link.ld  startup_rp2040.c  system_rp2040.c
include/: SD.h  hexutils.h  uart.h
include/fs/: FAT32.h
include/hardware/: dma.h  spi.h  uart.h
include/hardware_structs/: clocks.h  dma_channels.h  io_bank0.h  platform_defs.h  resets.h  spi.h  uart.h
libc/include/libc/: stdlib.h  string.h  unistd.h
libc/src/stdlib/: heap.c
libc/src/string/: memcpy.c  memset.c  strchr.c  strcmp.c  strlen.c  strncat.c  strncpy.c  strtok.c
libc/src/unistd/: sleep.c  usleep.c  write.c
programs/: CMakeLists.txt  init.c  link_test.ld  test.c
src/: SD.c  elf.c  hexutils.c  kernel_main.c  startup_rp2040.c  system_rp2040.c
src/arch/arm_cortexm/: linker.ld
src/arch/arm_cortexm/rp2040/: crt0.c  startup_rp2040.c  system_rp2040.c
src/arch/arm_cortexm/rp2040/boot2/: compCrc32.c
src/arch/arm_cortexm/rp2040/hardware_structs/: dma_channels.h  m0plus.h  pads_bank0.h  sio.h  uart.h
src/driver/dma/: dma.c  dma.h
src/driver/fs/: FAT32.c  FAT32.h
src/driver/spi/: spi.c
src/driver/uart/: uart.c  uart.h
src/fs/: FAT32.c
src/hardware/: dma.c  spi.c  uart.c
src/kernel/: main.c  process.c  process.h  syscall.c  syscall.h  systick.c  systick.h
src/lib/elf/: elf.c  elf.h
src/lib/fs/: FAT32.c  FAT32.h
src/lib/sd/: SD.c  SD.h
src/lib/util/: hexutils.c  hexutils.h
